<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Melhorando o Visual</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="strUsuario">Usuário:</string>
    <string name="strSenha">Senha:</string>
    <string name="strLogin">Login</string>
    <string name="title_activity_login">Menu do Sistema</string>
    <string name="strAutores">Autores</string>
    <string name="strLivros">Livros</string>
    <string name="strEditoras">Editoras</string>
    <string name="title_activity_todos_autores">Todos Autores Cadastrados</string>
    <string name="title_activity_todos_editoras">Todos Editoras Cadastradas</string>
    <string name="title_activity_todos_livros">Todos Livros Cadastrados</string>
    <string name="strVoltar">Voltar</string>
    <string name="strNovo">Novo</string>
    <string name="title_activity_editar_autores">Editar/Incluir Autores</string>
    <string name="strNome">Nome:</string>
    <string name="btrBio">Bio:</string>
    <string name="strGravar">Gravar</string>
    <string name="strExcluir">Excluir</string>

</resources>
