<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layEditarAutores"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.fatecmm.passagemdeparametros.EditarAutores" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shpfundo"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tbrEditarAutores1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/lblEditarAutoresNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strNome" />

            <EditText
                android:id="@+id/txtEditarAutoresNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tbrEditarAutores2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/lblEditarAutoresBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btrBio" />

            <EditText
                android:id="@+id/txtEditarAutoresBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:lines="3" />
        </TableRow>

        <TableRow
            android:id="@+id/tbrEditarAutores3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <Button
                android:id="@+id/btnEditarAutoresGravar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="1"
                android:background="@drawable/selbotao"
                android:text="@string/strGravar" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnEditarAutoresVoltar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selbotao"
        android:text="@string/strVoltar" />

    <Button
        android:id="@+id/btnEditarAutoresExcluir"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selbotao"
        android:text="@string/strExcluir" />

</RelativeLayout>